// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test suite for helpers getHtmlClassesForType returns HTML classes if custom types are not defined 1`] = `
Array [
  "notification-item",
  "notification-success",
]
`;

exports[`test suite for helpers getHtmlClassesForType returns custom HTML classes if custom types are defined 1`] = `
Array [
  "notification-item",
  "awesome",
]
`;

exports[`test suite for helpers getHtmlClassesForType returns standard HTML classes if no custom types are defined 1`] = `
Array [
  "notification-item",
  "notification-default",
]
`;

exports[`test suite for helpers getHtmlClassesForType returns standard HTML classes if no custom types are defined 2`] = `
Array [
  "notification-item",
  "notification-success",
]
`;

exports[`test suite for helpers getHtmlClassesForType returns standard HTML classes if no custom types are defined 3`] = `
Array [
  "notification-item",
  "notification-danger",
]
`;

exports[`test suite for helpers getHtmlClassesForType returns standard HTML classes if no custom types are defined 4`] = `
Array [
  "notification-item",
  "notification-warning",
]
`;

exports[`test suite for helpers getHtmlClassesForType returns standard HTML classes if no custom types are defined 5`] = `
Array [
  "notification-item",
  "notification-info",
]
`;

exports[`test suite for helpers getIconHtmlContent returns custom icon 1`] = `
<div
  className="react-awesome"
>
  <div
    className="content"
  />
</div>
`;

exports[`test suite for helpers getIconHtmlContent returns standard icon 1`] = `
<div
  className="notification-close"
>
  <span>
    ×
  </span>
</div>
`;

exports[`test suite for helpers getInitialSlidingState has no animation 1`] = `
Object {
  "animatedElementClasses": Array [
    "notification-item",
    "notification-success",
  ],
  "hasSliding": false,
  "rootElementStyle": Object {
    "height": "0",
    "marginBottom": 0,
    "overflow": "hidden",
    "width": undefined,
  },
}
`;

exports[`test suite for helpers getInitialSlidingState has no sliding 1`] = `
Object {
  "animatedElementClasses": Array [
    "notification-item",
    "notification-success",
    "animated",
    "fadeIn",
  ],
  "hasSliding": false,
  "rootElementStyle": Object {
    "height": "0",
    "marginBottom": 0,
    "overflow": "hidden",
    "width": undefined,
  },
}
`;

exports[`test suite for helpers getInitialSlidingState has sliding 1`] = `
Object {
  "animatedElementClasses": Array [
    "notification-item",
    "notification-success",
    "notification-invisible",
  ],
  "hasSliding": true,
  "rootElementStyle": Object {
    "height": "0",
    "marginBottom": 0,
    "overflow": "hidden",
    "width": undefined,
  },
}
`;

exports[`test suite for helpers getNotificationOptions does not set custom types if content is defined 1`] = `
Object {
  "animationIn": Array [
    "animated",
    "fadeIn",
  ],
  "animationOut": Array [
    "animated",
    "fadeOut",
  ],
  "container": "top-right",
  "content": <div
    className="content"
  />,
  "dismissable": Object {
    "click": true,
    "touch": false,
  },
  "id": Any<String>,
  "insert": "top",
  "message": "Document has been updated!",
  "slidingEnter": Object {
    "cubicBezier": "cubic-bezier(0.215, 0.61, 0.355, 1)",
    "delay": 0,
    "duration": 600,
  },
  "slidingExit": Object {
    "cubicBezier": "cubic-bezier(0.215, 0.61, 0.355, 1)",
    "delay": 0,
    "duration": 600,
  },
  "title": "Success",
  "touchSlidingBack": Object {
    "cubicBezier": "ease-in",
    "delay": 0,
    "duration": 600,
  },
  "touchSlidingExit": Object {
    "fade": Object {
      "cubicBezier": "ease-in",
      "delay": 0,
      "duration": 300,
    },
    "swipe": Object {
      "cubicBezier": "ease-in",
      "delay": 0,
      "duration": 600,
    },
  },
  "type": undefined,
}
`;

exports[`test suite for helpers getNotificationOptions sets custom types if defined 1`] = `
Object {
  "animationIn": Array [
    "animated",
    "fadeIn",
  ],
  "animationOut": Array [
    "animated",
    "fadeOut",
  ],
  "container": "top-right",
  "dismissable": Object {
    "click": true,
    "touch": false,
  },
  "id": Any<String>,
  "insert": "top",
  "message": "Document has been updated!",
  "slidingEnter": Object {
    "cubicBezier": "cubic-bezier(0.215, 0.61, 0.355, 1)",
    "delay": 0,
    "duration": 600,
  },
  "slidingExit": Object {
    "cubicBezier": "cubic-bezier(0.215, 0.61, 0.355, 1)",
    "delay": 0,
    "duration": 600,
  },
  "title": "Success",
  "touchSlidingBack": Object {
    "cubicBezier": "ease-in",
    "delay": 0,
    "duration": 600,
  },
  "touchSlidingExit": Object {
    "fade": Object {
      "cubicBezier": "ease-in",
      "delay": 0,
      "duration": 300,
    },
    "swipe": Object {
      "cubicBezier": "ease-in",
      "delay": 0,
      "duration": 600,
    },
  },
  "type": "success",
  "userDefinedTypes": undefined,
}
`;

exports[`test suite for helpers getNotificationOptions sets default values 1`] = `
Object {
  "animationIn": Array [
    "animated",
    "fadeIn",
  ],
  "animationOut": Array [
    "animated",
    "fadeOut",
  ],
  "container": "top-right",
  "dismissable": Object {
    "click": true,
    "touch": false,
  },
  "id": Any<String>,
  "insert": "top",
  "message": "Document has been updated!",
  "slidingEnter": Object {
    "cubicBezier": "cubic-bezier(0.215, 0.61, 0.355, 1)",
    "delay": 0,
    "duration": 600,
  },
  "slidingExit": Object {
    "cubicBezier": "cubic-bezier(0.215, 0.61, 0.355, 1)",
    "delay": 0,
    "duration": 600,
  },
  "title": "Success",
  "touchSlidingBack": Object {
    "cubicBezier": "ease-in",
    "delay": 0,
    "duration": 600,
  },
  "touchSlidingExit": Object {
    "fade": Object {
      "cubicBezier": "ease-in",
      "delay": 0,
      "duration": 300,
    },
    "swipe": Object {
      "cubicBezier": "ease-in",
      "delay": 0,
      "duration": 600,
    },
  },
  "type": "success",
}
`;

exports[`test suite for helpers getNotificationOptions sets default values 2`] = `
Object {
  "animationIn": Array [
    "animated",
    "fadeIn",
  ],
  "animationOut": Array [
    "animated",
    "fadeOut",
  ],
  "container": "top-right",
  "dismissable": Object {
    "click": true,
    "touch": false,
  },
  "id": Any<String>,
  "insert": "top",
  "message": "Document has been updated!",
  "slidingEnter": Object {
    "cubicBezier": "cubic-bezier(0.215, 0.61, 0.355, 1)",
    "delay": 0,
    "duration": 600,
  },
  "slidingExit": Object {
    "cubicBezier": "cubic-bezier(0.215, 0.61, 0.355, 1)",
    "delay": 0,
    "duration": 600,
  },
  "title": "Success",
  "touchSlidingBack": Object {
    "cubicBezier": "ease-in",
    "delay": 0,
    "duration": 600,
  },
  "touchSlidingExit": Object {
    "fade": Object {
      "cubicBezier": "ease-in",
      "delay": 0,
      "duration": 300,
    },
    "swipe": Object {
      "cubicBezier": "ease-in",
      "delay": 0,
      "duration": 600,
    },
  },
  "type": "success",
}
`;

exports[`test suite for helpers getNotificationOptions sets width if defined 1`] = `
Object {
  "animationIn": Array [
    "animated",
    "fadeIn",
  ],
  "animationOut": Array [
    "animated",
    "fadeOut",
  ],
  "container": "top-right",
  "dismissable": Object {
    "click": true,
    "touch": false,
  },
  "id": Any<String>,
  "insert": "top",
  "message": "Document has been updated!",
  "slidingEnter": Object {
    "cubicBezier": "cubic-bezier(0.215, 0.61, 0.355, 1)",
    "delay": 0,
    "duration": 600,
  },
  "slidingExit": Object {
    "cubicBezier": "cubic-bezier(0.215, 0.61, 0.355, 1)",
    "delay": 0,
    "duration": 600,
  },
  "title": "Success",
  "touchSlidingBack": Object {
    "cubicBezier": "ease-in",
    "delay": 0,
    "duration": 600,
  },
  "touchSlidingExit": Object {
    "fade": Object {
      "cubicBezier": "ease-in",
      "delay": 0,
      "duration": 300,
    },
    "swipe": Object {
      "cubicBezier": "ease-in",
      "delay": 0,
      "duration": 600,
    },
  },
  "type": "success",
  "width": 100,
}
`;
